create dir and fill with downloaded imgs, get user input search term. tons of bugs

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "tori_scraper.js",
   "scripts": {
-		"start": "node tori_scraper.js",
+    "start": "node tori_scraper.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon tori_scraper.js"
   },
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.1",
-    "kill-port": "^2.0.1"
+    "kill-port": "^2.0.1",
+    "prompt-sync": "^4.2.0"
   }
 }
